--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,7 +17,9 @@ h1 {
     min-width: 22rem;
   }
 
-  .btn      { @apply flex items-center justify-center w-48 h-16 px-8 py-2 text-lg bg-teal-500 border-0 rounded-full text-custom-offWhite;}
+  .teal-shadow:hover { box-shadow: 0 25px 50px -12px rgba(165, 248, 244, 0.25); @apply transition duration-300 ease-out; }
+
+  .btn      { @apply flex items-center justify-center w-48 px-5 py-3 font-semibold text-gray-100 bg-teal-500 rounded;}
   .btn:focus{ @apply outline-none; }
   .btn:hover{ @apply bg-teal-600; }
 
